learning html5 basics

--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-This is my first commit message. This is another commit message
+<!DOCTYPE html>
+<html lang="en">
+	<!-- Head is where the logic lives -->
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<title>My Project</title>
+	</head>
+	<!-- This contains the content seen on the web page  -->
+	<body>
+		<!--***********************************************
+		LEARNING HEADING TAGS There are 6 of em h1 to h6
+	***************************************************** -->
+		<h1> the boy</h1>
+		<h2> the boy</h2>
+		<h3> the boy</h3>
+		<h4> the boy</h4>
+		<h5> the boy</h5>
+		<h6> the boy</h6>
+		<!-- PARAGRAPH TAG -->
+		<P>I am a paragraph tag.</P>
+		<!-- Anchor TAG -->
+		<a> I'm an anchor tag</a>
+		<a href="https://samsoniyanda.herokuapp.com"> used for links</a>
+		<a href="https://samsoniyanda.herokuapp.com" target="_blank"  > used for links on new tab</a>
+		<p title="paragraph"> I am a paragraph tag.</p>
+		<!-- Input Tags(most input tags are self closing tags and they all have different types of attributes) -->
+		<input/>
+		<input type="text"/>
+		<input type="radio"/>
+		<input type="checkbox"/>
+		<input type="date"/>
+		<input type="range"/>
+		<input type="text" placeholder="type your name here.."/>
+		<input type="password" placeholder="type your password here.."/>
+		<input type="radio" checked="true"/>
+		<input type="text" placeholder="type your name here.." readonly="true"/>
+		<input type="text" placeholder="type your name here.." value="nduka"/>
+		<input type="color"/>
+		<input type="email" placeholder="=type your email here"/>
+		<input type="number" placeholder="phone number"/>
+		<input type="button" value="click me"/>
+		<input type="search" placeholder="type your search"/>
+		<input type="submit" value="submit"/>
+		<!-- NB: select tag also an input tag -->
+		<select>
+			<option selected></option>
+			<option>rice</option>
+			<option>beans</option>
+			<option>yams</option>
+			</option>
+		</select>
+		<textarea></textarea>
+	</body>
+</html>
