modification of index.html and creation of home.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		<a> I'm an anchor tag</a>
 		<a href="https://samsoniyanda.herokuapp.com"> used for links</a>
 		<a href="https://samsoniyanda.herokuapp.com" target="_blank"  > used for links on new tab</a>
+		<a href="home.html"  target="_blank" >HOME</a>
 		<p title="paragraph"> I am a paragraph tag.</p>
 		<!-- Input Tags(most input tags are self closing tags and they all have different types of attributes) -->
 		<input/>
@@ -52,5 +53,13 @@
 			</option>
 		</select>
 		<textarea></textarea>
+		<!-- Layout Tag -->
+		<header></header>
+		<main></main>
+		<footer></footer>
+		<section></section>
+		<article></article>
+		<aside></aside>
+		<div></div>
 	</body>
 </html>
